# PRISM-Tutor

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: data_sources.yaml  datasets.yaml  default.yaml  experiments.yaml  judge.yaml  model.yaml
data/: build_dataset.py
docs/: metrics_policy.md  next_smoke_plan.md
outputs/: README.md
prism_tutor/: __init__.py
references/: README.md
scripts/: 00_download_datasets.py  00_prepare_env_check.py  01_build_datasets.py  02_run_generation.py  03_run_judge.py  04_compute_metrics.py  05_make_tables.py  06_make_figures.py  07_sample_human_audit.py  08_human_agreement.py  09_export_paper_artifacts.py  10_estimate_experiment_size.py  11_plan_or_run_shards.py  12_finalize_full_run.py  run_exp0_problem_diagnosis.sh  run_exp1_routing.sh  run_exp2_budget.sh  run_exp3_state_commit.sh  run_exp4_end_to_end.sh  run_exp5_ablation.sh  run_exp6_robustness.sh
serving/: __init__.py  health_check.py  start_vllm_gpu0.sh  start_vllm_gpu1.sh  start_vllm_tp2.sh  vllm_command.py
task_cards/: 00_TASK_CARD_INDEX.md  01_PROJECT_SETUP_AND_REPRODUCIBILITY.md  02_ENVIRONMENT_AND_DEPENDENCIES.md  03_QWEN3_8B_MODELSCOPE_VLLM_SERVING.md  04_DATASETS_SCHEMA_AND_SPLITS.md  05_AGENT_SCHEMAS_AND_BASE_CLIENT.md  06_AGENT_PROMPTS_AND_JSON_REPAIR.md  07_LANGGRAPH_RUNTIME_STATE.md  08_BASELINE_METHODS.md  09_PRISM_TUTOR_RUNTIME_MODULES.md  10_GENERATION_RUNNER_AND_LOGGING.md  11_AUTOMATIC_METRICS.md  12_LLM_JUDGE_DEEPSEEK_V4_PRO.md  13_EXPERIMENT_MATRIX_EXP0_TO_EXP6.md  14_STATISTICS_TABLES_AND_FIGURES.md  (+3 more)
(+143 files in other folders)
