[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-tutor"
version = "0.1.0"
description = "Pedagogical-risk-calibrated runtime for multi-agent math tutoring"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "jsonlines>=4.0",
  "tqdm>=4.66",
  "openai>=1.40",
  "matplotlib>=3.8",
  "rouge-score>=0.1.2",
]

[project.optional-dependencies]
serving = [
  "vllm",
  "modelscope",
  "transformers>=4.51.0",
  "accelerate",
  "langgraph",
  "langchain-core",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["prism_tutor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
